--- a/BTVN/Pokemon/pokemon.html
+++ b/BTVN/Pokemon/pokemon.html
@@ -7,7 +7,7 @@
     <link rel = "stylesheet" href = "pokemon.css">
 </head>
 <body>
-    <h2 class = "pokemmon">POKEMON API</h2>
+    <h2 class = "pokemon">POKEMON API</h2>
     <div class="search">
         <input type="text" placeholder="Search some Pokemon...">
     </div>
