--- a/BTVN/Pokemon/pokemon.html
+++ b/BTVN/Pokemon/pokemon.html
@@ -11,5 +11,8 @@
     <div class="search">
         <input type="text" placeholder="Search some Pokemon...">
     </div>
+    <div class = "load">
+        <button class="load_button">Load More<s/button>
+    </div>
 </body>
 </html>
