--- a/BTVN/Pokemon/pokemon.html
+++ b/BTVN/Pokemon/pokemon.html
@@ -3,16 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokemon API | Minh Cu</title>
+    <title>Pokemon API</title>
     <link rel = "stylesheet" href = "pokemon.css">
 </head>
 <body>
-    <h2 class = "pokemon">POKEMON API</h2>
-    <div class="search">
-        <input type="text" placeholder="Search some Pokemon...">
+    <div class = "header">
+        <h2 class = "header-title">POKEMON API</h2>
+        <div class="search">
+            <input type="text" placeholder="Search some Pokemon...">
+        </div>
     </div>
+    <div class = "main-content"></div>
     <div class = "load">
-        <button class="load_button">Load More<s/button>
+        <button class="load_button">Load More</button>
     </div>
+    <script src="pokemon.js"></script>
 </body>
 </html>
