--- a/BTVN/Pokemon/pokemon.html
+++ b/BTVN/Pokemon/pokemon.html
@@ -7,16 +7,17 @@
     <link rel = "stylesheet" href = "pokemon.css">
 </head>
 <body>
-    <div class = "header">
-        <h2 class = "header-title">POKEMON API</h2>
+    <div class="header">
+        <h2 class="header-title">POKEMON API</h2>
         <div class="search">
-            <input type="text" placeholder="Search some Pokemon...">
+            <input type="text" id="search-input" placeholder="Search some Pokemon..." autocomplete="off">
         </div>
     </div>
-    <div class = "main-content"></div>
-    <div class = "load">
+    <div class="main-content"></div>
+    <div class="no-result" style="font-size: 24px;"></div> 
+    <div class="load">
         <button class="load_button">Load More</button>
     </div>
     <script src="pokemon.js"></script>
 </body>
-</html>
+</html
